--- a/dbt_example/profiles/profiles.yml
+++ b/dbt_example/profiles/profiles.yml
@@ -7,8 +7,8 @@ dbt_example:
       project: teste-456316
       dataset: dbt_dw
       threads: 4
-      keyfile: /home/kaue/Documentos/Cursos/dbt-core/config/teste-456316-9b5f07615702.json
-
+      # keyfile: /home/kaue/Documentos/Cursos/dbt-core/config/teste-456316-9b5f07615702.json
+      keyfile: /home/kaue/Documentos/Cursos/DBT/dbt-core/config/teste-456316-9b5f07615702.json
 # dbt_example:
 #   target: local_dev
 #   outputs:
