Iniciando estudos sobre snapchots

--- a/dbt_example/dbt_project.yml
+++ b/dbt_example/dbt_project.yml
@@ -49,3 +49,8 @@ models:
     dbt_example:
       +schema: seeds
       tags: ['seeds']
+
+snapshots:
+  dbt_example:
+    schema: snapshots
+    tags: ['snapshots']
