--- a/dbt_example/dbt_project.yml
+++ b/dbt_example/dbt_project.yml
@@ -29,6 +29,14 @@ clean-targets:         # directories to be removed by `dbt clean`
 # In this example config, we tell dbt to build all models in the example/
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
+
+
+# example variable
+vars:
+  ambiente: 'desenvolvimento'
+  data_minima: '2023-01-01'
+  schema_nome: 'desenvolvimento_schema'
+
 models:
   dbt_example:
     staging:
